# sils

./: README.md  cluster.ipynb  cluster2.csv  cluster3.csv  cluster5.csv  cluster9.csv  environment.yml  geo.py  implications.ipynb  langmap.py  origins.ipynb  origins.py  prep.ipynb  pyproject.toml  walsdata.py
data/: codes.csv  contributors.csv  examples.csv  language_names.csv  languages.csv  parameters.csv  values.csv
