[tool.poetry]
name = "sils"
version = "0.1.0"
description = "Statistical analysis of the WALS dataset"
authors = ["Graham Hill <gthill97@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "~3.8"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
geopandas = "^0.9.0"
ipykernel = "^5.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
